# cloudkitty-dashboard

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  babel-django.cfg  babel-djangojs.cfg  manage.py  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cloudkittydashboard/: _90_enable_ck.py  __init__.py  overrides.py  utils.py
cloudkittydashboard/api/: cloudkitty.py
cloudkittydashboard/dashboards/: common.py
cloudkittydashboard/dashboards/admin/: dashboard.py
cloudkittydashboard/dashboards/admin/hashmap/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
cloudkittydashboard/dashboards/admin/modules/: forms.py  panel.py  tables.py  urls.py  views.py
cloudkittydashboard/dashboards/admin/pyscripts/: forms.py  panel.py  tables.py  urls.py  views.py
cloudkittydashboard/dashboards/admin/summary/: panel.py  tables.py  urls.py  views.py
cloudkittydashboard/dashboards/project/rating/: panel.py  tables.py  tests.py  urls.py  views.py
cloudkittydashboard/dashboards/project/reporting/: panel.py  urls.py  views.py
cloudkittydashboard/enabled/: _10_admin_group.py  _11_admin_hashmap_panel.py  _11_admin_rating_panel.py  _11_admin_summary_panel.py  _11_project_rating_panel.py  _12_project_reporting_panel.py  _13_admin_pyscripts_panel.py  _31000_cloudkitty.py  _32010_admin_group.py  _32011_project_group.py  _32020_admin_hashmap_panel.py  _32030_project_rating_panel.py  _32031_project_reporting_panel.py
cloudkittydashboard/forms/: __init__.py  base.py
cloudkittydashboard/tests/: base.py  settings.py  test_cloudkittydashboard.py  test_predictive_pricing.py  test_utils.py
contrib/: cloudkitty-dashboard.spec.in
doc/: makefile  requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/contributor/: contributing.rst
releasenotes/notes/: add-options-to-attach-pre-post-fix-to-rate-value-2d78f5cb7c289445.yaml  create-instance-override-8a2cfc152365d5d5.yaml  drop-py-2-7-c62eb5a7f3eb4d30.yaml  enhance-rating-dashboard-summary-cards-5a454d412b294fc3.yaml  improve-total-tab-96df42d1e562fc4f.yaml  keystone-endpoint-type-b5646c052e65c848.yaml  project-rating-v2-a96436c0f59da133.yaml  rework-reporting-tab-99cd8a8574911e09.yaml  unstack-cost-per-service-per-hour-eff50255d66029c8.yaml  update-predictive-pricing-dc97030d8898af0d.yaml  upgrade-admin-rating-panel-to-v2-cloudkitty-api-5de060caad561421.yaml
releasenotes/source/: conf.py  index.rst  pike.rst
(+50 files in other folders)
